--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,15 +1,19 @@
 <section class="disqus">
     <div id="disqus_thread"></div>
-    <script type="text/javascript">
-
-        var disqus_shortname = ''; 
-        var disqus_developer = 0; // developer mode is on
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    <script>       
+        var disqus_config = function () {
+            this.page.url = {{site.url}}{{page.url}};  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = {{page.slug}}; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };        
+        (function() {  // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            
+            s.src = '//blog-dvl-pl.disqus.com/embed.js';
+            
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
         })();
     </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </section>
+
