--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -427,6 +427,10 @@ iframe, .fluid-width-video-wrapper {
     margin: 1.75em 0;
 }
 
+.adsbygoogle iframe {
+   margin: 0;
+}
+
 /* When a video is inside the fitvids wrapper, drop the
 margin on the iframe, cause it breaks stuff. */
 .fluid-width-video-wrapper iframe {
