--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -855,6 +855,10 @@ body:not(.post-template) .post-title {
    5. Single Post - When you click on an individual post
    ========================================================================== */
 
+.post-ads {
+   margin-bottom: 2rem;
+}
+
 .post-template .post-header {
    margin-bottom: 3.4rem;
 }
