--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ post_class: post-template
             </section>
         </header>
 
-        <header class="post-header">
+        <header class="post-ads">
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <!-- Elastic -->
                 <ins class="adsbygoogle"
